# libdunemusic

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.travis/: script-mingw.sh
binding/DuneMusic-CS/: DuneMusic-CS.csproj  DuneMusic-CS.sln  DuneMusic.cs
binding/DuneMusic-CS/Properties/: AssemblyInfo.cs
cmake/: download_sdl2_hg.cmake
contrib/csharp/: DuneMusic.cs
sources/: dunemusic.cpp  dunemusic.def  dunemusic.h  music_list.h  play.cpp  songlengths.cpp  synth.cpp
sources/dunelegacy/: DataTypes.h  globals.h  mmath.cpp  mmath.h
sources/dunelegacy/FileClasses/: FileManager.cpp  FileManager.h  Pakfile.cpp  Pakfile.h
sources/dunelegacy/FileClasses/adl/: dbopl.cpp  dbopl.h  demuopl.cpp  demuopl.h  nemuopl.cpp  nemuopl.h  nukedopl3.c  nukedopl3.h  opl.cpp  sound_adlib.cpp  sound_adlib.h  wemuopl.cpp
sources/dunelegacy/FileClasses/music/: ADLPlayer.cpp  ADLPlayer.h  MusicPlayer.h
sources/dunelegacy/fixmath/: FixPoint.h
sources/dunelegacy/misc/: FileStream.cpp  FileStream.h  FileSystem.cpp  SDL2pp.h  md5.cpp
sources/fakeSDLmixer/: fakeSDL.h  fakeSDLmixer.cpp  fakeSDLmixer.h
trash/: appveyor.yml
